--- a/abccaretreatmenteffects_report_main.tex
+++ b/abccaretreatmenteffects_report_main.tex
@@ -39,26 +39,35 @@ The University of Chicago}
 
 \section{Introduction}
 
-Citing evidence that early-childhood education reduces socio-economic inequality, public funding of early learning programs has been on the rise in recent years. Thirty-two states increased spending on early childcare for the 2015-2016 year, with an overall state-spending increase of 12 percent [citation pending]. The federal budget proposal for 2017 includes an approximately \$300 million increase in spending on early childhood education which is estimated to expand access to high quality childcare to 1 million infants, toddlers, and three-year-olds by 2026  [citation pending]. With sizable and consistent increases in funding, determining the effectiveness of early childhood interventions is critical. An understanding of the specific mechanisms by which early childhood interventions impact later-life outcomes informs how new resources should be allocated to effectively reduce socio-economic inequality early in life. However, the current evidence base is limited and often employs methodologies that fail to identify appropriate measures of effectiveness that can answer policy-relevant questions. 
+\noindent One of President Barack Obama's policy flags throughout his mandate has been the promotion of early childhood education \citep{Bajaj_Labaton_2009_ObamaRiskAssets,White_House_2014_Econ_of_EC_Investments,White_House_2014_Fact_Sheet_Press}. He has used it as a base to argue in favor of reducing socio-economic inequality. Both Democratic and Republican candidates to succeed Obama have placed considerable priority to discuss early childhood education.\footnote{Candidates from both parties consider access to education a right Americans should have; all make particular emphasis on early childhood education \citep{Hillary-for-Am_2016_Universal-Preschool,On-the-Issues_2016_Sanders-on-Families,On-the-Issues_2016_Cruz-on-Education}.} Yet, comprehensive and methodologically rigorous evidence on the efficiency and effectiveness of early childhood education programs is still scarce. Most of the recent studies have either of the following pitfalls: (i) focus on a limited set of outcomes that fail to account for the complete set of outcomes a program can impact;\footnote{An extreme example is the evaluation of preschool programs using an age-eligibility cutoff. A battery of studies compare children who were just eligible to children who were just ineligible given their birth dates and assess the gain of an additional year of preschool. This does not represent a comprehensive evaluation approach. Instead, it is an evaluation comparing an arbitrary set of children, in a very narrow set of tests. Examples of these studies include: \citep{Gormley_Gayer_2005_JHR,Gormley_Gayer_etal_2005_DP,Weiland_2013_CD_Impacts-of-Pre-K}.} (ii) do not take into account that, even when evaluating randomized controlled trials, evaluation methodologies need to account for non-compliance to the initial assignment to treatment or treatment substitution by the control families;\footnote{A relevant example is the evaluation of Head Start through its randomized controlled trial, the Head Start Impact Study \citep{Puma_Bell_etal_2010_HeadStartImpact}. Comparing the children in the treatment and the control groups usually yields relative low gains. This happens because a substantial proportion of children randomized out of the program were enrolled into preschool alternatives, some of them to other Head Start centers. Thus, a raw comparison between the treatment and the control groups children does not inform on either the efficiency or the effectiveness of Head Start. Studies providing a methodology to account for treatment substitution find that Head Start has substantial effects, although they focus on a single, short-term outcome \citep{Kline-Walters_2015_NBER-Evaluating,Feller_Grindal_etal_2016_ComparedtoWhat}.} and (iii) evaluate randomized controlled trials with flawed designs.\footnote{An evaluation Tennessee Voluntary Prekindergarten is an emblematic example of this \citep{Lipsey_et_al_2013_Tennessee_Kindergrtn_PRI,Lipsey_et_al_2015_Randomized_Control_Trial_PRI}. The researchers designed a randomized controlled trial to evaluate the program. Unfortunately, they asked permission to assess the children after the randomization protocol. Thus, they have information available for children whose parents agreed for them to be evaluates \textit{post} randomization, inducing a potential imbalance between the children randomized in and out of the program. The evaluation does not account for that. Further, the results this evaluation present are on a narrow and short-term set of outcomes.}\\ 
 
-The case for the economic efficiency of early childhood education in the US is largely based on evidence from the Perry Preschool Program (Perry). Analyzing Perry has clarified that early childhood education has significant positive effects on short and long-term socio-economic outcomes, even when accounting for compromised randomization, small sample size, and multiple hypothesis testing \citep{Heckman_Moon_etal_2010_QE}. In addition to boosting socio-economic outcomes, early childhood education can have an annual rate of return ranging from 7 to 10 percent.\footnote{If one dollar were to be invested at age 4, and then reinvested yearly and compounded over a life-time, the investment would accrue 60 to 300 dollars by age 65, accounting for all the program's costs and the social burden a government would cause by raising taxes to finance it \citep{Heckman_Moon_etal_2010_RateofReturn}} Finally, findings from the program suggest that gains in socio-emotional skills, rather than cognitive skills, mediate reductions in criminal behavior and increased employment and labor income in adults\citep{Heckman_Pinto_etal_2013_PerryFactor}.
+\noindent  The case for the economic efficiency of early childhood education in the US is largely based on evidence from the Perry Preschool Program (Perry). Analyzing Perry has clarified: (i) that early childhood education has significant positive effects on a variety short and long-term socio-economic outcomes, even when accounting for compromised randomization, small sample size inference, and multiple hypotheses testing \citep{Heckman_Moon_etal_2010_QE}; (ii) that early childhood education is not only effective at boosting socio-economic outcomes, but could have an annual internal rate of return that ranges between 7 and 10 percent. If one dollar were to be invested at age 4, and then yearly reinvested and compounded over a a life-time, the return would accrue to 60 to 300 dollars by age 65. This accounts for all the programs' cost and the social burden a government would cause by raising taxes to pay for it \citep{Heckman_Moon_etal_2010_RateofReturn}; and (iii) the mechanisms through which early education programs generate gains in long-term outcomes. The findings suggest that gains in socio-emotional skills, much more than gains cognitive skills, mediate reductions in criminal behavior and increases in employment and labor income \citep{Heckman_Pinto_etal_2013_PerryFactor}.\\
 
-However, equally comprehensive and methodologically rigorous evidence on the efficiency and effectiveness of other early childhood interventions is scarce. Most of the recent research has one of the following flaws: (i) focus on a limited set of outcomes that fail to measure the widespread and lifelong impact that a program can have;\footnote{An extreme example is the evaluation of preschool programs using an age-eligibility cutoff, in which children who were just eligible are compared to children who were just ineligible given their birth dates, to assess the gain from an additional year of preschool. This approach is not comprehensive because it evaluates an arbitrary set of children with a very narrow set of tests. Examples of these studies include: \citep{Gormley_Gayer_2005_JHR,Gormley_Gayer_etal_2005_DP,Weiland_2013_CD_Impacts-of-Pre-K}.} (ii) failure to account for non-compliance to treatment and treatment substitution when evaluating a randomized-controlled trial;\footnote{A relevant example is the evaluation of Head Start through its randomized controlled trial, the Head Start Impact Study \citep{Puma_Bell_etal_2010_HeadStartImpact}. A substantial proportion of children randomized out of the program were enrolled in preschool alternatives, including other Head Start centers. Thus, a raw comparison between the treatment and the control group children does not inform on neither the efficiency nor the effectiveness of Head Start and usually yields relatively low gains. Studies providing a methodology to account for treatment substitution find that Head Start has substantial effects, although they focus on a single, short-term outcome \citep{Kline-Walters_2015_NBER-Evaluating,Feller_Grindal_etal_2016_ComparedtoWhat}.}(iii) evaluation of a randomized controlled trial with a flawed design.\footnote{An evaluation of Tennessee Voluntary Prekindergarten is an emblematic example of this \citep{Lipsey_et_al_2013_Tennessee_Kindergrtn_PRI,Lipsey_et_al_2015_Randomized_Control_Trial_PRI}. The researchers designed a randomized controlled trial to evaluate the program, but they requested permission to assess the children after the randomization protocol. Thus, they only have information available on children whose parents agreed for them to be evaluated \textit{post}-randomization, inducing a potential imbalance between the children randomized into and out of the program that the evaluation does not account for that. Furthermore, the results presented are on a narrow set of short-term outcomes.} 
+\noindent A common critique on the evidence favoring the economic case for early childhood education is the lack of an ampler evidence base. This paper presents a rigorous evaluation of two related randomized controlled trials, the Carolina Abecedarian Project (ABC). and the Carolina Approach to Responsive Education (CARE). These two programs allow us to assess the short- and long-term effects of early childhood education on multiple dimensions of human development.\\
 
-This paper expands the limited evidence for the economic case for early childhood education and presents results that can answer policy-relevant questions through a rigorous evaluation of two closely related randomized controlled trials, the Carolina Abecedarian Project (ABC) and the Caroline Approach to Responsive Education (CARE).
+\noindent ABC and CARE were programs implemented in the early 1970s and late 1980s, and therefore we observe long-term outcomes of their participants. In the first phase, both programs assigned high-quality center-based childcare from ages 0 to 5 to a treatment group and no treatment at all to a control group. In addition, the children who were assigned center-based childcare in CARE also received home visits that aimed to foster the relationship between the participant children and their parents. Also, CARE had a second treatment group with home visits and no center-based childcare. Both programs had had a second phase of treatment from ages 5 to 8, that consisted of home visits that aimed to continue to assists the children's development. In ABC, the second stage treatment was also assigned randomly, at age 5 independently of the first-phase randomization. The design of these programs allows us to tests hypotheses to evaluate the effectiveness of different type of programs, as well as the effectiveness of intervening at different stages of childhood.\\
 
-ABC and CARE were early-childhood education programs conducted in the early 1970s and late 1980s that targeted economically disadvantaged individuals. Both programs used a randomized-controlled trial design to assign participants to control or treatment. Treatment in ABC consisted of high-quality center-based childcare. The treatment group in CARE was divided in two –-- the first received high-quality center-based childcare and the second received high-quality center-based childcare and home visits designed to foster a strong, positive relationship between the participant children and their parents. Both programs also had a second phase of treatment from ages 5 to 8 consisting solely of home visits. The design of the programs allows for the evaluation of the relative effectiveness of different forms of intervention, as well as the effectiveness of intervening at different stages in childhood.  
+\noindent As any social experiment, the two programs have methodological complications. We construct a methodology to evaluate the program in the presence of these.\footnote{Another usual critique to programs like ABC and CARE we do not assess here is their small sample size. Asymptotic inference methods, however, are well suited to analyze samples of the size of these programs \citep{Hanushek_Lindseth_2009_BOOKSchoolhousesCourthouses}. \citet{Campbell_Conti_etal_2014_EarlyChildhoodInvestments} evaluate the effectiveness of ABC at boosting results both using small sample size inference and an asymptotic procedure without finding little sensitivity if at all.}\\ 
 
-Like any social experiment, both programs had methodological complications. However, we construct a methodology to correct for these complications in our evaluation.\footnote{Another common critique of programs like ABC and CARE, which we do not address here, is their small sample size. Asymptotic inference methods, however, are well suited to analyze samples of this size \citep{Hanushek_Lindseth_2009_BOOKSchoolhousesCourthouses}. \citet{Campbell_Conti_etal_2014_EarlyChildhoodInvestments} evaluate the effectiveness of ABC at boosting results using small sample size inference and an asymptotic procedure without finding little sensitivity, if any at all.} Our methodology accounts for cases of non-compliance to treatment, for which analysis of ABC has been criticized \citep{Hu_2014_ABC-Study}.
-We also develop a methodology that addresses treatment substitution,\footnote{In both programs, the parents of about 70\% of the children randomized out of center-based childcare enrolled their children in relatively high-quality preschool alternatives.} enabling us to quantify the effect of ABC and CARE relative to a fixed alternative, such as a lower quality preschool or no preschool at all, rather than solely relative to the available supply of alternatives. This provides a more accurate measure of the impact of the intervention itself, rather than the intervention relative to another program.
+\noindent We acknowledge and propose a methodology to account for cases of non-compliance to treatment for which ABC has been criticized \citep{Hu_2014_ABC-Study}. In fact, we present a thorough documentation for each of the cases of non-compliance at each stage of the data collection for both programs.\\ 
 
-Finally, we develop a methodology for measuring the effects on multiple outcomes throughout the lifetime. \textbf{[Is the following necessary for the intro?]}In the literature, this is accomplished by either (i) calculating the internal rate-of-return or benefit-to-cost ratio \citep{Heckman_Moon_etal_2010_RateofReturn}  or (ii) grouping outcomes into categories –-- e.g. cognition, criminal activity, health –-- and adjusting the inference on each of the outcomes to account for multiple hypothesis testing and avoid ``cherry picking" significant results \citep{Lehman_Romano_2005_AnnStat,Lehmann_Romano_2005_testing,Heckman_Moon_etal_2010_QE}. Alternatively, we propose a method of calculating and formalizing an inference procedure for determining both the number of outcomes for which the program had a positive treatment effect and the number of outcomes for which the program had a positive and \textit{significant} treatment effect at various significant levels.\footnote{This alternative is an application of inference on an statistic summarizing multiple sources of information, i.e. a combining function \citep{Pesarin_Salmaso_2010_PermutationTests}.}
+\noindent We also present a thorough documentation of treatment substitution. In both programs, the parents of around 70\% of the children randomized out of center-based childcare enrolled their children in relatively high-quality preschool alternatives. We develop a methodology to account for treatment substitution and explain that there are two policy questions that we are able to ask using the data of ABC and CARE. First, we can ask what is the effect of ABC or CARE given the supply of preschool alternatives that was available when they were implemented. Second, we can ask what is the effect of ABC or CARE relative to a fixed alternative, no preschool at all, a preschool alternative, etc. The second question better speaks to the effectiveness and efficiency of the programs. Any statistic summarizing effectiveness and efficiency is respect to a relative, known alternative.\\
 
-Using these tools, this paper presents evidence for the following: (i) for ABC, there are significant, positive treatment effects on a range of outcomes, with the number of significant effects increasing when the control sample is restricted to children who did not substitute for treatment; (ii) for CARE, center-based childcare and home visits were significantly more effective than only home visits, supporting the results from ABC; (iii) for both programs, there is no significant effect of the second phase of treatment, suggesting that intervention is more effective earlier in life rather than later \textbf{[Is this really true? Couldn’t this be because the second phase was home visits, and it's just that home visits are not effective?]} \\
+\noindent Finally, we propose a method to summarize the effectiveness of a program when information on multiple outcomes throughout the life-cycle is available. There are two current alternatives in the literature. One is to to calculate statistics that speak to the efficiency of a social program, as the internal rate of return or the benefit-to-cost ratio \citep{Heckman_Moon_etal_2010_RateofReturn}. The other is to group outcomes in arbitrary categories---e.g. cognition, criminal activity, health---and adjust the inference on each of the outcomes to account for multiple hypotheses testing and avoid ``cherry picking'' significant results \citep{Lehman_Romano_2005_AnnStat,Lehmann_Romano_2005_testing,Heckman_Moon_etal_2010_QE}. The alternative we propose consists of calculating and formalizing an inference procedure for (i) the count of outcomes for which the program causes a positive treatment effect; (ii) the count of outcomes for which the program cases a \text{significant} and positive treatment effect, considering different levels of significance.\footnote{This alternative is an application of the making an inference on an statistic summarizing multiple sources of information, i.e. a combining function \citep{Pesarin_Salmaso_2010_PermutationTests}.}\\
 
-\noindent This paper continues the work of \citet{Campbell_Conti_etal_2014_EarlyChildhoodInvestments}, who analyze the effectiveness of ABC at boosting long-term health outcomes. It also provides the methodology and the treatment effect estimates that feed into our companion paper, \citet{Elango_et_al_2015_ABC_unpublished}, in which we use the treatment effects presented in this paper to forecast the life-cycle gains of ABC participants in multiple dimensions of human development throughout their entire lifetimes in order to calculate the program's internal rate of return and benefit-to-cost ratio.\\
+\noindent In the rest of the paper, we formalize through several procedures the data description in Table~\ref{table:}, and find solid robustness. We evaluate 141 outcomes describing human development throughout the life-cycle. Although we present counts over all the outcomes, we group them in categories for simplicity. These are, maternal employment, life-cycle cognition, teenage socio-emotional skills, adulthood socio-emotional skills, education, employment and income, crime, and health. For each outcome, we calculate the mean difference between the treatment and control groups in ABC and the two treatment groups and the control group in CARE.\\
 
-\noindent The rest of the paper proceeds as follows. Section~\ref{section:background} describes the background of both programs. Section~\ref{section:methodology} formalizes our methodology. Section~\ref{section:results} presents our main results and Section~\ref{section:conclusion} offers some final comments. An extensive appendix presents additional information on the program and data used relative to what we present here. It also discusses various alternative methodologies to evaluate the programs and documents the results we present more extensively. 
+\noindent For ABC 100 out of 141 outcomes show positive treatment effects, as measures by the mean difference between hte treatment and the control groups. When we limit the control sample to children who did not participate of any treatment alternatives, this number increases to 108. As we argue throughout the paper, this number better describes the effectiveness of ABC because it compares treatment to a fixed, relative alternative, no treatment at all. $54\%$ of the results are positive and significant at the $10\%$. At the significance level of $10\%$, 14 outcomes should be positive and significant, a much lower number than $54\%$.\\
+
+\noindent For CARE, the results indicate that the treatment that had center-based childcare and home visits was much more effective than the treatment that had home visits only. The results of the former very much in line with the results of ABC. We come to this conclusion by comparing both treatment groups to the same control group. Actually, taken together, these comparisons establish that center-based childcare treatment is much more effective than home visits.\\
+
+\noindent \textbf{[JLG: table with main description of raw data.]}\\
+
+\noindent We also tests diverse hypotheses to assess the effectiveness of the second-phase randomization. The results are not at all comparable to the results of the first-phase randomization. We conclude that these programs were much more effective when intervening before age 5, rather than from ages 5 to 8.\\
+
+\noindent This paper continues the work of \citet{Campbell_Conti_etal_2014_EarlyChildhoodInvestments}, who analyze the effectiveness of ABC at boosting long-term health outcomes. It also provides the methodology and the treatment effect estimates that feed into our companion paper, \citet{Elango_et_al_2015_ABC_unpublished}. In it, we use the treatment effects in this paper to forecasts the life-cycle gains of ABC on multiple dimensions of human development, from birth and until death, to calculate its internal rate of return and its benefit-to-cost ratio.\\
+
+\noindent The rest of the paper proceeds as follows. Section~\ref{section:background} describes the background of the program. It includes an overview, a description of the eligibility criteria and the populations served, an characterization of the randomization protocol and of treatment substitution, and comprehensive summary of the program.  Section~\ref{section:methodology} formalizes our methodology, discussing how we assess compromised randomization and non-compliance, treatment substitution, and multiple hypotheses testing. Section~\ref{section:results} presents our main results and Section~\ref{section:conclusion} offers some final comments. An extensive Appendix presents a much more thorough description of the program and data relative to what we present here. It also discusses various alternative methodologies to evaluate the programs, and documents the results we present in a lengthier way. 
 
 \section{Background} \label{section:background}
 \subsection{Overview}
