--- a/heckman.bib
+++ b/heckman.bib
@@ -8509,6 +8509,21 @@
   Timestamp                = {2016.03.16}
 }
 
+@Article{Bjorklund-Jantti_1997_AER,
+  Title                    = {Intergenerational Income Mobility in {S}weden Compared to the {U}nited {S}tates},
+  Author                   = {Bj\"{o}rklund, Anders and J\"{a}ntti, Markus},
+  Journal                  = {American Economic Review},
+  Year                     = {1997},
+
+  Month                    = {December},
+  Number                   = {5},
+  Pages                    = {1009--1018},
+  Volume                   = {87},
+
+  Owner                    = {acursivegirl},
+  Timestamp                = {2016.04.14}
+}
+
 @Article{Bjorklund-etal_2012_J-Pub-E,
   Title                    = {Intergenerational Top Income Mobility in {S}weden: Capitalist Dynasties in the Land of Equal Opportunity?},
   Author                   = {Bj\"{o}rklund, Anders and Roine, Jesper and Waldenstr\"{o}m, Daniel},
@@ -9071,6 +9086,22 @@
 
   Owner                    = {Jessica Dyer},
   Timestamp                = {2015.07.31}
+}
+
+@Article{Blanden-etal_2014_Rev-Inc-Wealth,
+  Title                    = {Intergenerational Mobility in the {U}nited {S}tates and {G}reat {B}ritain: A Comparative Study of Parent-Child Pathways},
+  Author                   = {Blanden, Jo and Haveman, Robert and Smeeding, Timothy and Wilson, Kathryn},
+  Journal                  = {Review of Income and Wealth},
+  Year                     = {2014},
+
+  Month                    = {September},
+  Number                   = {3},
+  Pages                    = {425--449},
+  Volume                   = {60},
+
+  Doi                      = {10.1111/roiw.12032},
+  Owner                    = {acursivegirl},
+  Timestamp                = {2016.04.14}
 }
 
 @InCollection{Blau_2003_ChildCareSubsidy,
@@ -15552,6 +15583,22 @@
   Author                   = {Chabe-Ferret, Sylvain},
   Note                     = {Unpublished manuscript},
   Year                     = {2010}
+}
+
+@Article{Chadwick-Solon_2002_AER,
+  Title                    = {Intergenerational Income Mobility among Daughters},
+  Author                   = {Chadwick, Laura and Solon, Gary},
+  Journal                  = {American Economic Review},
+  Year                     = {2002},
+
+  Month                    = {March},
+  Number                   = {1},
+  Pages                    = {335--344},
+  Volume                   = {92},
+
+  Doi                      = {10.1257/000282802760015766},
+  Owner                    = {acursivegirl},
+  Timestamp                = {2016.04.14}
 }
 
 @Article{Chaikind_Cormas_1991_JHE,
@@ -22751,16 +22798,16 @@
   Timestamp                = {2011.07.17}
 }
 
-@Inbook{Duckworth_Carlson_2013_Self-Regulation_INBOOK,
+@InBook{Duckworth_Carlson_2013_Self-Regulation_INBOOK,
   Title                    = {Self-Regulation and School Success},
   Author                   = {Duckworth, Angela Lee and Carlson, Stephanie M.},
+  Chapter                  = {10},
   Editor                   = {Sokol, Bryan W. and Grouzet, Frederick M. E. and M\"{u}ller, Ulrich},
   Pages                    = {208},
   Publisher                = {Cambridge University Press},
   Year                     = {2013},
   Volume                   = {40},
 
-  Chapter                  = {10},
   Doi                      = {10.1017/cbo9781139152198.015},
   Journal                  = {Self-Regulation and Autonomy: Social and Developmental Dimensions of Human Conduct},
   Owner                    = {Stallings_LLC},
@@ -30981,6 +31028,17 @@ Lakdawalla, Darius N. and Panis, Constantijn and Shekelle, Paul G.},
   Timestamp                = {2014.06.19}
 }
 
+@Article{Gorman_1980_RESTUD,
+  Title                    = {A possible procedure for analysing quality differentials in the egg market},
+  Author                   = {Gorman, W. M.},
+  Journal                  = {The Review of Economic Studies},
+  Year                     = {1980},
+  Pages                    = {843-856},
+
+  Owner                    = {Alexandra},
+  Timestamp                = {2014.07.22}
+}
+
 @Article{Gorman_1980_REStud,
   Title                    = {A Possible Procedure for Analysing Quality Differentials in the Egg Market},
   Author                   = {W. M. Gorman},
@@ -30993,17 +31051,6 @@ Lakdawalla, Darius N. and Panis, Constantijn and Shekelle, Paul G.},
   Volume                   = {47},
 
   Owner                    = {Lynn}
-}
-
-@Article{Gorman_1980_RESTUD,
-  Title                    = {A possible procedure for analysing quality differentials in the egg market},
-  Author                   = {Gorman, W. M.},
-  Journal                  = {The Review of Economic Studies},
-  Year                     = {1980},
-  Pages                    = {843-856},
-
-  Owner                    = {Alexandra},
-  Timestamp                = {2014.07.22}
 }
 
 @Article{Gorman_1965_RES,
@@ -41507,6 +41554,19 @@ Lakdawalla, Darius N. and Panis, Constantijn and Shekelle, Paul G.},
   Timestamp                = {2014.06.19}
 }
 
+@Electronic{Hu_2014_ABC-Study,
+  Title                    = {What Happened with the {A}becedarian Study? {IQ}-Malleability Theories in Danger},
+  Author                   = {Hu, Meng},
+  HowPublished             = {Blog post, Human Varieties, http://humanvarieties.org/2014/03/03/what-happened-with-the-abecedarian-study-iq-malleability-theories-in-danger/ (Accessed 4/14/16)},
+  Month                    = {March},
+  Organization             = {Human Varieties},
+  Url                      = {http://humanvarieties.org/2014/03/03/what-happened-with-the-abecedarian-study-iq-malleability-theories-in-danger/},
+  Year                     = {2014},
+
+  Owner                    = {acursivegirl},
+  Timestamp                = {2016.04.14}
+}
+
 @Article{Hu_Schennach_2008_Econometrica,
   Title                    = {Instrumental Variable Treatment of Nonclassical Measurement Error Models},
   Author                   = {Hu, Yingyao and Schennach, Susanne M.},
@@ -41849,6 +41909,19 @@ Lakdawalla, Darius N. and Panis, Constantijn and Shekelle, Paul G.},
   Year                     = {1962},
   Editor                   = {Nagel, E. and Suppes, P. and Tarski, A.},
   Pages                    = {232--239}
+}
+
+@Article{Hussain-etal_2009_JID,
+  Title                    = {Intergenerational Earnings Mobilities – How Sensitive Are They to Income Measures?},
+  Author                   = {Hussain, Mohammad and Munk, Martin D. and Bonke, Jens},
+  Journal                  = {Journal of Income Distribution},
+  Year                     = {2009},
+  Number                   = {3--4},
+  Pages                    = {79--92},
+  Volume                   = {18},
+
+  Owner                    = {acursivegirl},
+  Timestamp                = {2016.04.14}
 }
 
 @Article{Huston_Duncan_etal_2005_DPsych,
@@ -42475,13 +42548,16 @@ Lakdawalla, Darius N. and Panis, Constantijn and Shekelle, Paul G.},
   Timestamp                = {2015.07.31}
 }
 
-@TechReport{Jantti2006,
-  Title                    = {American Exceptionalism in a New Light: A Comparison of Intergenerational Earnings Mobility in the Nordic Countries, the United Kingdom and the United States},
-  Author                   = {Markus J\"{a}ntti and Knut Roedoed and Robin Naylor and Anders Bjorklund and Bernt Bratsberg and Oddbjorn Raaum and Eva Osterbacka and Tor Eriksson},
-  Institution              = {IZA},
+@TechReport{Jantti_2006_Am-Exceptionalism,
+  Title                    = {{A}merican Exceptionalism in a New Light: A Comparison of Intergenerational Earnings Mobility in the {N}ordic Countries, the {U}nited {K}ingdom and the {U}nited {S}tates},
+  Author                   = {Markus J\"{a}ntti and Knut R{\o}ed and Robin Naylor and Anders Bj\"{o}rklund and Bernt Bratsberg and Oddbj{\o}rn Raaum and Eva \"{O}sterbacka and Tor Eriksson},
+  Institution              = {Institute for the Study of Labor},
   Year                     = {2006},
+
+  Address                  = {Bonn},
+  Month                    = {January},
   Number                   = {1938},
-  Type                     = {Discussion Paper},
+  Type                     = {IZA Discussion Paper},
 
   Date-added               = {2013-06-28 03:10:26 +0000},
   Date-modified            = {2013-06-28 03:42:59 +0000}
@@ -73183,6 +73259,18 @@ Robinson, Lara Rachel},
   Timestamp                = {2011.09.24}
 }
 
+@TechReport{Taguma-etal_2013_OECD-Quality,
+  Title                    = {Quality Matters in Early Childhood Education and Care: {S}weden},
+  Author                   = {Taguma, Miho and Litjens, Ineke and Makowiecki, Kelly},
+  Institution              = {Organisation for Economic Co-operation and Development},
+  Year                     = {2013},
+
+  Address                  = {Paris},
+
+  Owner                    = {acursivegirl},
+  Timestamp                = {2016.04.14}
+}
+
 @Article{Tallis_1961_JRSS,
   Title                    = {The Moment Generating Function of the Truncated Multi-Normal Distribution},
   Author                   = {Tallis, G. M.},
@@ -73952,9 +74040,10 @@ Robinson, Lara Rachel},
   Timestamp                = {2016.03.01}
 }
 
-@Inbook{Theil_1992_CentralPlanningBureau,
+@InBook{Theil_1992_CentralPlanningBureau,
   Title                    = {Henri Theil’s Contributions to Economics and Econometrics (Advanced Studies in Theoretical and Applied Econometrics, Volume 23)},
   Author                   = {Theil, H.},
+  Chapter                  = {Estimation and Simultaneous Correlation in Complete Equation Systems},
   Pages                    = {65-107},
   Publisher                = {Central Planning Bureau},
   Year                     = {1992},
@@ -73962,7 +74051,6 @@ Robinson, Lara Rachel},
   Address                  = {The {H}ague},
   Note                     = {Mimeographed memorandum},
 
-  Chapter                  = {Estimation and Simultaneous Correlation in Complete Equation Systems},
   Owner                    = {Jenna B},
   Timestamp                = {2015.06.29}
 }
@@ -80660,6 +80748,21 @@ early childhood education and pre-kindergarten programs},
   Url                      = {http://www.acf.hhs.gov/programs/core/ongoing_research/faces/hs_pdf/albqfinl2.pdf}
 }
 
+@Article{Zimmerman_1992_AER,
+  Title                    = {Regression Toward Mediocrity in Economic Stature},
+  Author                   = {Zimmerman, David J.},
+  Journal                  = {American Economic Review},
+  Year                     = {1992},
+
+  Month                    = {June},
+  Number                   = {3},
+  Pages                    = {409--429},
+  Volume                   = {82},
+
+  Owner                    = {acursivegirl},
+  Timestamp                = {2016.04.14}
+}
+
 @Article{Zimmerman_1981_DR,
   Title                    = {{The Home Observation for Measurement of the Environment}: A Comment on {E}lardo and {B}radley's Review},
   Author                   = {Zimmerman, Mark},
@@ -81659,6 +81762,11 @@ early childhood education and pre-kindergarten programs},
   Timestamp                = {2015.10.02}
 }
 
+@comment{jabref-meta: selector_publisher:Cambridge University Press;El
+ sevier Science B.V.;National Bureau of Economic Research;North-Hollan
+ d ;Oxford University Press;Princeton University Press;University of C
+h ic ago Press;}
+
 @comment{jabref-meta: selector_journal:American Economic Review;ChildD
 evelopment;De Economist ;Econometrica;Economic Development and Cultura
 l Change;Economica;Fiscal Studies;Industrial Relations;Journal of Deve
@@ -81668,11 +81776,6 @@ litical Economy;Journal of the American Statistical Association;Journa
 l of the European Economic Association;Labour Economics;Quarterly Jour
 nal of Economics;Review of Economic Studies;Review of Economics and St
 atistics;The American Economic Review;}
-
-@comment{jabref-meta: selector_publisher:Cambridge University Press;El
- sevier Science B.V.;National Bureau of Economic Research;North-Hollan
- d ;Oxford University Press;Princeton University Press;University of C
-h ic ago Press;}
 
 @comment{jabref-meta: groupsversion:3;}
 
